# VoteGalaxyBack

./: .env  Cargo.toml  voteback.db
migrations/: 20260210211849_create_tables.sql
src/: main.rs
src/model/: admin.rs  mod.rs  pool.rs  vote.rs
src/repository/: mod.rs  pool_repository.rs
