[package]
name = "Voteback"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework web
actix-web = "4"
actix-cors = "0.7"

# GraphQL
async-graphql = "7"
async-graphql-actix-web = "7"

# Base de données
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilitaires
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# Auth JWT
jsonwebtoken = "9"
bcrypt = "0.15"